[runtime] Skip building unexecuted tests for System.IdentityModel

--- a/mcs/class/System.Security/Makefile
+++ b/mcs/class/System.Security/Makefile
@@ -31,6 +31,10 @@ include ../../build/library.make
 
 $(build_lib): $(secxml_libdir)/System.dll $(MONO_SECURITY_DLL)
 
+ifdef MOBILE_PROFILE
+NO_TEST = yes
+endif
+
 $(secxml_libdir)/System.dll:
 	(cd ../System; $(MAKE) $@)
 
