Add out of process crash handler APIs.
Taken from https://github.com/PeteLewisUnity/mono/commits/unity-2017-02-staging-oop

--- a/msvc/libmonoruntime-unity.targets.filters
+++ b/msvc/libmonoruntime-unity.targets.filters
@@ -19,6 +19,9 @@
     <ClCompile Include="$(MonoSourceLocation)\mono\metadata\unity-icall.c">
       <Filter>Source Files$(MonoRuntimeFilterSubFolder)\unity</Filter>
     </ClCompile>
+    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\oop.c">
+      <Filter>Source Files$(MonoRuntimeFilterSubFolder)\unity</Filter>
+    </ClCompile>
 
   </ItemGroup>
   <ItemGroup>
