--- a/msvc/libmonoruntime-unity.targets
+++ b/msvc/libmonoruntime-unity.targets
@@ -7,5 +7,6 @@
     <ClCompile Include="$(MonoSourceLocation)\mono\metadata\unity-utils.c" />
     <ClInclude Include="$(MonoSourceLocation)\mono\metadata\unity-utils.h" />
     <ClCompile Include="$(MonoSourceLocation)\mono\metadata\unity-icall.c" />
+    <ClCompile Include="$(MonoSourceLocation)\mono\metadata\oop.c" />
   </ItemGroup>
 </Project>
