--- a/msvc/libmonoutils.vcxproj
+++ b/msvc/libmonoutils.vcxproj
@@ -26,8 +26,178 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <Import Project="libmonoutils-common.targets" />
-  <Import Project="libmonoutils-mono.targets" />
+  <ItemGroup>
+    <ClCompile Include="..\mono\utils\mono-rand.c" />
+    <ClCompile Include="..\mono\utils\mono-rand-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-time.c" />
+     <ClCompile Include="..\mono\utils\mono-threads-posix.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\mono-threads-posix-signals.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\os-event-win32.c" />
+    <ClCompile Include="..\mono\utils\dlmalloc.c" />
+    <ClCompile Include="..\mono\utils\hazard-pointer.c" />
+    <ClCompile Include="..\mono\utils\json.c" />
+    <ClCompile Include="..\mono\utils\lock-free-alloc.c" />
+    <ClCompile Include="..\mono\utils\lock-free-array-queue.c" />
+    <ClCompile Include="..\mono\utils\lock-free-queue.c" />
+    <ClCompile Include="..\mono\utils\mach-support-amd64.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\mach-support-arm.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\mach-support-x86.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\mach-support.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\mono-codeman.c" />
+    <ClCompile Include="..\mono\utils\mono-conc-hashtable.c" />
+    <ClCompile Include="..\mono\utils\mono-context.c" />
+    <ClCompile Include="..\mono\utils\mono-counters.c" />
+    <ClCompile Include="..\mono\utils\mono-dl-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-dl.c" />
+    <ClCompile Include="..\mono\utils\mono-error.c" />
+    <ClCompile Include="..\mono\utils\mono-filemap.c" />
+    <ClCompile Include="..\mono\utils\mono-internal-hash.c" />
+    <ClCompile Include="..\mono\utils\mono-io-portability.c" />
+    <ClCompile Include="..\mono\utils\mono-linked-list-set.c" />
+    <ClCompile Include="..\mono\utils\mono-logger.c" />
+    <ClCompile Include="..\mono\utils\mono-log-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-log-common.c" />
+    <ClCompile Include="..\mono\utils\mono-math.c" />
+    <ClCompile Include="..\mono\utils\mono-md5.c" />
+    <ClCompile Include="..\mono\utils\mono-mmap.c" />
+    <ClCompile Include="..\mono\utils\mono-mmap-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-networkinterfaces.c" />
+    <ClCompile Include="..\mono\utils\mono-threads-state-machine.c" />
+    <ClCompile Include="..\mono\utils\networking.c" />
+    <ClCompile Include="..\mono\utils\networking-posix.c" />
+    <ClCompile Include="..\mono\utils\networking-missing.c" />
+    <ClCompile Include="..\mono\utils\networking-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-path.c" />
+    <ClCompile Include="..\mono\utils\mono-poll.c" />
+    <ClCompile Include="..\mono\utils\mono-proclib.c" />
+    <ClCompile Include="..\mono\utils\mono-proclib-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-property-hash.c" />
+    <ClCompile Include="..\mono\utils\mono-publib.c" />
+    <ClCompile Include="..\mono\utils\mono-sha1.c" />
+    <ClCompile Include="..\mono\utils\mono-stdlib.c" />
+    <ClCompile Include="..\mono\utils\mono-threads-mach.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\mono\utils\mono-threads-windows.c" />
+    <ClCompile Include="..\mono\utils\mono-threads.c" />
+    <ClCompile Include="..\mono\utils\mono-threads-coop.c" />
+    <ClCompile Include="..\mono\utils\mono-tls.c" />
+    <ClCompile Include="..\mono\utils\mono-uri.c" />
+    <ClCompile Include="..\mono\utils\mono-value-hash.c" />
+    <ClCompile Include="..\mono\utils\monobitset.c" />
+    <ClCompile Include="..\mono\utils\strenc.c" />
+    <ClCompile Include="..\mono\utils\atomic.c" />
+    <ClCompile Include="..\mono\utils\mono-hwcap.c" />
+    <ClCompile Include="..\mono\utils\mono-hwcap-x86.c" />
+    <ClCompile Include="..\mono\utils\bsearch.c" />
+    <ClCompile Include="..\mono\utils\memfuncs.c" />
+    <ClCompile Include="..\mono\utils\parse.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\mono\utils\mono-threads-posix-signals.h" />
+     <ClInclude Include="..\mono\utils\dlmalloc.h" />
+    <ClInclude Include="..\mono\utils\dtrace.h" />
+    <ClInclude Include="..\mono\utils\freebsd-dwarf.h" />
+    <ClInclude Include="..\mono\utils\freebsd-elf32.h" />
+    <ClInclude Include="..\mono\utils\freebsd-elf64.h" />
+    <ClInclude Include="..\mono\utils\freebsd-elf_common.h" />
+    <ClInclude Include="..\mono\utils\gc_wrapper.h" />
+    <ClInclude Include="..\mono\utils\hazard-pointer.h" />
+    <ClInclude Include="..\mono\utils\json.h" />
+    <ClInclude Include="..\mono\utils\linux_magic.h" />
+    <ClInclude Include="..\mono\utils\lock-free-alloc.h" />
+    <ClInclude Include="..\mono\utils\lock-free-array-queue.h" />
+    <ClInclude Include="..\mono\utils\lock-free-queue.h" />
+    <ClInclude Include="..\mono\utils\mach-support.h" />
+    <ClInclude Include="..\mono\utils\memcheck.h" />
+    <ClInclude Include="..\mono\utils\mono-codeman.h" />
+    <ClInclude Include="..\mono\utils\mono-compiler.h" />
+    <ClInclude Include="..\mono\utils\mono-complex.h" />
+    <ClInclude Include="..\mono\utils\mono-conc-hashtable.h" />
+    <ClInclude Include="..\mono\utils\mono-context.h" />
+    <ClInclude Include="..\mono\utils\mono-coop-mutex.h" />
+    <ClInclude Include="..\mono\utils\mono-coop-semaphore.h" />
+    <ClInclude Include="..\mono\utils\mono-counters.h" />
+    <ClInclude Include="..\mono\utils\mono-digest.h" />
+    <ClInclude Include="..\mono\utils\mono-dl-fallback.h" />
+    <ClInclude Include="..\mono\utils\mono-dl.h" />
+    <ClInclude Include="..\mono\utils\mono-error-internals.h" />
+    <ClInclude Include="..\mono\utils\mono-error.h" />
+    <ClInclude Include="..\mono\utils\mono-internal-hash.h" />
+    <ClInclude Include="..\mono\utils\mono-io-portability.h" />
+    <ClInclude Include="..\mono\utils\mono-linked-list-set.h" />
+    <ClInclude Include="..\mono\utils\mono-logger-internals.h" />
+    <ClInclude Include="..\mono\utils\mono-logger.h" />
+    <ClInclude Include="..\mono\utils\mono-machine.h" />
+    <ClInclude Include="..\mono\utils\mono-math.h" />
+    <ClInclude Include="..\mono\utils\mono-membar.h" />
+    <ClInclude Include="..\mono\utils\mono-memory-model.h" />
+    <ClInclude Include="..\mono\utils\mono-mmap.h" />
+    <ClInclude Include="..\mono\utils\mono-networkinterfaces.h" />
+    <ClInclude Include="..\mono\utils\mono-once.h" />
+    <ClInclude Include="..\mono\utils\mono-os-mutex.h" />
+    <ClInclude Include="..\mono\utils\mono-os-semaphore.h" />
+    <ClInclude Include="..\mono\utils\mono-path.h" />
+    <ClInclude Include="..\mono\utils\mono-poll.h" />
+    <ClInclude Include="..\mono\utils\mono-proclib.h" />
+    <ClInclude Include="..\mono\utils\mono-property-hash.h" />
+    <ClInclude Include="..\mono\utils\mono-publib.h" />
+    <ClInclude Include="..\mono\utils\mono-rand.h" />
+    <ClInclude Include="..\mono\utils\mono-sigcontext.h" />
+    <ClInclude Include="..\mono\utils\mono-stack-unwinding.h" />
+    <ClInclude Include="..\mono\utils\mono-stdlib.h" />
+    <ClInclude Include="..\mono\utils\mono-string.h" />
+    <ClInclude Include="..\mono\utils\mono-threads.h" />
+    <ClInclude Include="..\mono\utils\mono-threads-api.h" />
+    <ClInclude Include="..\mono\utils\mono-threads-coop.h" />
+    <ClInclude Include="..\mono\utils\mono-time.h" />
+    <ClInclude Include="..\mono\utils\mono-tls.h" />
+    <ClInclude Include="..\mono\utils\mono-uri.h" />
+    <ClInclude Include="..\mono\utils\mono-value-hash.h" />
+    <ClInclude Include="..\mono\utils\monobitset.h" />
+    <ClInclude Include="..\mono\utils\strenc.h" />
+    <ClInclude Include="..\mono\utils\valgrind.h" />
+    <ClInclude Include="..\mono\utils\atomic.h" />
+    <ClInclude Include="..\mono\utils\mono-hwcap.h" />
+    <ClInclude Include="..\mono\utils\mono-hwcap-x86.h" />
+    <ClInclude Include="..\mono\utils\bsearch.h" />
+    <ClInclude Include="..\mono\utils\memfuncs.h" />
+    <ClInclude Include="..\mono\utils\parse.h" />
+    <ClInclude Include="..\mono\utils\os-event.h" />
+  </ItemGroup>
   <ItemGroup>
     <MASM Include="..\mono\utils\win64.asm">
       <FileType>Document</FileType>
