Remove Makefile build code for IL2CPP on Mono

--- a/mono/utils/Makefile.am
+++ b/mono/utils/Makefile.am
@@ -1,4 +1,4 @@
-noinst_LTLIBRARIES = libmonoutils.la libmonoutils-unity-il2cpp.la
+noinst_LTLIBRARIES = libmonoutils.la
 
 AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/mono $(LIBGC_CPPFLAGS) $(GLIB_CFLAGS) $(SHARED_CFLAGS)
 
@@ -22,14 +22,6 @@ unix_sources = \
 
 platform_sources = $(unix_sources)
 endif
-
-unity_files = 		\
-	unity-rand.c 	\
-	unity-time.c
-
-mono_only_files =	\
-	mono-rand.c 	\
-	mono-time.c
 
 monoutils_sources = \
 	$(platform_sources)	\
@@ -78,6 +70,7 @@ monoutils_sources = \
 	mono-proclib-windows-internals.h		\
 	mono-publib.c		\
 	mono-string.h		\
+	mono-time.c  		\
 	mono-time.h  		\
 	strenc.h		\
 	strenc.c		\
@@ -168,6 +161,7 @@ monoutils_sources = \
 	networking-missing.c	\
 	networking-windows.c	\
 	networking.h	\
+	mono-rand.c 	\
 	mono-rand.h \
 	mono-rand-windows-internals.h \
 	memfuncs.c \
@@ -258,11 +252,7 @@ arch_sources += mono-hwcap-cross.c
 
 endif
 
-libmonoutils_la_SOURCES = $(monoutils_sources) $(arch_sources) $(mono_only_files)
-
-libmonoutils_unity_il2cpp_la_SOURCES = $(monoutils_sources) $(arch_sources) $(unity_files) 
-libmonoutils_unity_il2cpp_la_CFLAGS = -DIL2CPP_ON_MONO -DDISABLE_JIT -DDISABLE_REMOTING -fexceptions -DPLATFORM_UNITY -I../../../../il2cpp/build/libil2cpp/os/c-api
-
+libmonoutils_la_SOURCES = $(monoutils_sources) $(arch_sources)
 
 libmonoutilsincludedir = $(includedir)/mono-$(API_VER)/mono/utils
 
