Remove the Unity PAL eglib build.
* This is built via IL2CPP when it is needed now.
* I should have remove this earlier, but I missed it.

--- a/eglib/src/Makefile.am
+++ b/eglib/src/Makefile.am
@@ -1,4 +1,4 @@
-noinst_LTLIBRARIES = libeglib.la libeglib-unity.la
+noinst_LTLIBRARIES = libeglib.la
 
 AM_CFLAGS = $(WERROR_CFLAGS)
 
@@ -10,10 +10,6 @@ win_files  = \
 unix_files = \
 	gdate-unix.c  gdir-unix.c  gfile-unix.c  gmisc-unix.c	\
 	gmodule-unix.c gtimer-unix.c gfile-posix.c
-
-unity_files = \
-	gdate-unity.c gdir-unity.c gfile-unity.c gmisc-unity.c \
-	gpath-unity.c
 
 common_files = \
 	eglib-remap.h	\
@@ -54,12 +50,7 @@ libeglib_la_SOURCES = \
 	$(common_files) \
 	$(os_files)
 
-libeglib_unity_la_SOURCES = \
-	$(common_files) \
-	$(unity_files)
-
 libeglib_la_CFLAGS = -g -Wall -D_FORTIFY_SOURCE=2
-libeglib_unity_la_CFLAGS = $(libeglib_la_CFLAGS) -DPLATFORM_UNITY -I../../../../il2cpp/build/libil2cpp/os/c-api
 
 AM_CPPFLAGS = -I$(srcdir)
 
