--- a/tools/pedump/Makefile.am
+++ b/tools/pedump/Makefile.am
@@ -28,3 +28,8 @@ pedump_LDADD = 			\
 if HOST_DARWIN
 pedump_LDFLAGS=-framework CoreFoundation -framework Foundation
 endif
+
+#Helper target to rebuild metadata as well, it's useful when working on the verifier as its source still on metadata
+md:
+	make -C ../../mono/metadata all
+	make -C . all
