[trace-metadata] move callspec code into its own module
Introduce callspec.c/h which encapsulate the call specification
functionality.

--- a/mono/metadata/Makefile.am
+++ b/mono/metadata/Makefile.am
@@ -283,7 +283,9 @@ common_sources = \
 	sre-save.c	\
 	custom-attrs.c	\
 	fdhandle.h	\
-	fdhandle.c
+	fdhandle.c	\
+	callspec.h	\
+	callspec.c
 
 # These source files have compile time dependencies on GC code
 gc_dependent_sources = \
